--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1>OAE Delivery Dashboard</h1>
-  <p><a href="{{ url_for('start_delivery') }}">Start Delivery Process</a></p>
+  <p><a href="{{ url_for('select_project') }}">New Delivery</a></p>
+  <p><a href="{{ url_for('start_delivery') }}">Demo: Generate Dummy GRD</a></p>
 </body>
 </html>
